# python-boilerplate

./: .gitattributes  .gitignore  Dockerfile  MANIFEST.in  Makefile  Pipfile  README.md  setup.cfg  setup.py
.github/workflows/: ci.yaml
boilerplate/: __init__.py  _version.py  add.py
docs/: conf.py  index.rst  requirements.txt
tests/: test_add.py
