[pylint]
disable = C0111
ignore = _version.py

[mypy]
ignore_missing_imports = True
check_untyped_defs = True

[yapf]
column_limit = 100

[coverage:run]
omit =
    boilerplate/_version.py

[mypy-boilerplate._version]
ignore_errors = True

[metadata]
name = boilerplate
author = Fausto Morales
author_email = faustomorales@gmail.com
description = A boilerplate package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/faustomorales/python-boilerplate
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
packages = find:
include_package_data = True
install_requires =
    essential_generators
    keras
    tqdm
    imgaug

[versioneer]
VCS = git
style = pep440
versionfile_source = boilerplate/_version.py
versionfile_build = boilerplate/_version.py
tag_prefix = v